--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,48 @@
 <div class="main-div">
-    <mat-card class="matCard">  <h3 style="align-items: center;">Login Form</h3>
-        <div>
-             <mat-form-field appearance="legacy">
-              <mat-label>Username</mat-label>
-              <input matInput placeholder="username">
-            </mat-form-field>
+    <mat-card class="matCard">
+      
+      <form [formGroup]="loginForm">
+        <div >
+            <div class="Title2">Welcome To Fundoo</div>
+            <div class="Title">Login</div>
+        
         </div>
+      
+      
         <div>
-            <mat-form-field appearance="legacy" >
-              <mat-label>Password</mat-label>
-              <input matInput type="password" placeholder="password">
+            <mat-form-field appearance="legacy"  style="width: 358px;">
+                <mat-label>Username</mat-label>
+                <input matInput placeholder="username" 
+               
+                >
             </mat-form-field>
         </div>
 
+
+
+
+
         <div>
-            <button mat-raised-button (click)="Submit()">Submit</button>
-        </div>    
-    
+            <mat-form-field appearance="legacy"   style="width: 358px;">
+                <mat-label>Password</mat-label>
+                <input matInput type="password" placeholder="password"
+              
+                >
+            </mat-form-field>
+        </div>
+        <div class="button">
+            <div>
+              <button mat-raised-button (click)="Submit()">signUp</button>
+            </div>
+            <div>
+                <button mat-raised-button (click)="Submit()">LogIn</button>
+            </div>
+        </div>
+
+        <div class="forgot">
+            <button mat-raised-button (click)="Submit()">Forgot Password</button>
+        </div>
+      </form>
     </mat-card>
 
 </div>
