--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,43 +1,44 @@
-<div class="main-div">
-  <form [FormGroup]="registerForm">
-    <mat-card>  <h3 align="center">Registration Form</h3>
-        <div>
+<div class=main-div  >
+<mat-card> 
+  <form  [formGroup]="registerForm">
+     
+      <h2>Registration Form</h2>
+        <div class="form-field">
             <mat-form-field appearance="legacy">
               <mat-label>First Name</mat-label>
-              <input matInput placeholder="firstname" formControlName="firstname">
+              <input matInput placeholder="firstname" formControlName="firstName">
             </mat-form-field>
         </div>
         <div>           
            <mat-form-field appearance="legacy">
               <mat-label>Last Name</mat-label>
-              <input matInput placeholder="lastname" formControlName="lastname">
+              <input matInput placeholder="lastname" formControlName="lastName">
             </mat-form-field>
         </div>
 
-          <div>
+        <div class="form-field">
             <mat-form-field appearance="legacy">
               <mat-label>Email Id</mat-label>
-              <input matInput placeholder="emailid" formControlName="emailid">
+              <input matInput placeholder="emailid" formControlName="emailId">
             </mat-form-field>
           </div>
-            <div>
+          <div class="form-field">
                 <mat-form-field appearance="legacy">
                   <mat-label>Password</mat-label>
                   <input matInput placeholder="password" formControlName="password">
                 </mat-form-field>
               </div>
 
-            <div>
+              <div class="form-field">
                 <mat-form-field appearance="legacy">
                   <mat-label>Mobile Number</mat-label>
-                  <input matInput placeholder="mobilenumber" formControlName="mobilenumber">
+                  <input matInput placeholder="mobilenumber" formControlName="mobileNumber">
                 </mat-form-field>
               </div>
 
               <div>
-                  <button mat-raised-button (click)="Submit()">Submit</button>
+                  <button mat-raised-button (click)="onSubmit()">Register</button>
               </div>    
-              
-    </mat-card>
   </form>
+  </mat-card> 
 </div>
