--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,25 +8,18 @@
         
         </div>
       
-      
         <div>
             <mat-form-field appearance="legacy"  style="width: 358px;">
                 <mat-label>Username</mat-label>
-                <input matInput placeholder="username" 
-               
-                >
+                <input matInput placeholder="username" formControlName="emailId" >
             </mat-form-field>
         </div>
-
-
-
-
 
         <div>
             <mat-form-field appearance="legacy"   style="width: 358px;">
                 <mat-label>Password</mat-label>
                 <input matInput type="password" placeholder="password"
-              
+                formControlName="password"
                 >
             </mat-form-field>
         </div>
@@ -35,7 +28,7 @@
               <button mat-raised-button (click)="Submit()">signUp</button>
             </div>
             <div>
-                <button mat-raised-button (click)="Submit()">LogIn</button>
+                <button mat-raised-button (click)="onSubmit()">LogIn</button>
             </div>
         </div>
 
