--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -25,7 +25,7 @@
           <div class="form-field">
                 <mat-form-field appearance="legacy">
                   <mat-label>Password</mat-label>
-                  <input matInput placeholder="password" formControlName="password">
+                  <input matInput type ="password" placeholder="password" formControlName="password">
                 </mat-form-field>
               </div>
 
