Reset password done

--- a/src/app/forgetpassword/forgetpassword.component.html
+++ b/src/app/forgetpassword/forgetpassword.component.html
@@ -1,1 +1,24 @@
-<p>forgetpassword works!</p>
+<div class="mainDiv">
+    <mat-card>
+        <form [formGroup]="forgetPassword">
+            <div>
+                <div class="Title">Enter your Username
+                </div>
+
+            </div>
+
+            <div>
+                <mat-form-field appearance="legacy" style="width: 358px;">
+                    <mat-label>username</mat-label>
+                    <input matInput placeholder="username" formControlName="emailId">
+                </mat-form-field>
+            </div>
+
+            <div>
+                <button mat-raised-button (click)="onSubmit()">submit</button>
+            </div>
+
+        </form>
+    </mat-card>
+
+</div>
