--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
         </div>
         <div class="button">
             <div>
-              <button mat-raised-button (click)="Submit()">signUp</button>
+              <a href="http://localhost:4200/register">signUp</a>
             </div>
             <div>
                 <button mat-raised-button (click)="onSubmit()">LogIn</button>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="forgot">
-            <button mat-raised-button (click)="Submit()">Forgot Password</button>
+            <a href="http://localhost:4200/forgetPassword">Forgot Password</a>
         </div>
       </form>
     </mat-card>
