--- a/src/app/resetpassword/resetpassword.component.html
+++ b/src/app/resetpassword/resetpassword.component.html
@@ -1,1 +1,15 @@
-<p>resetpassword works!</p>
+<div class="mainDiv"> 
+    <mat-card>
+        <form [formGroup]="resetPassword1">
+            <div>
+                <mat-form-field appearance="legacy" style="width: 358px;">
+                    <mat-label>new password</mat-label>
+                    <input matInput type="password" placeholder="new password" formControlName="password">
+                </mat-form-field>
+            </div>
+            <div>
+                    <button mat-raised-button (click)="onSubmitReset()">Submit</button>
+                </div>
+        </form>
+    </mat-card>
+</div>
