--- a/src/app/forgetpassword/forgetpassword.component.html
+++ b/src/app/forgetpassword/forgetpassword.component.html
@@ -2,18 +2,16 @@
     <mat-card>
         <form [formGroup]="forgetPassword">
             <div>
-                <div class="Title">Enter your Username
+                <div class="Title">Enter your Email Id
                 </div>
 
             </div>
-
             <div>
                 <mat-form-field appearance="legacy" style="width: 358px;">
-                    <mat-label>username</mat-label>
-                    <input matInput placeholder="username" formControlName="emailId">
+                    <mat-label>Email Id</mat-label>
+                    <input matInput placeholder="emailId" formControlName="emailId">
                 </mat-form-field>
             </div>
-
             <div>
                 <button mat-raised-button (click)="onSubmit()">submit</button>
             </div>
