--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -6,33 +6,33 @@
         <div class="form-field">
             <mat-form-field appearance="legacy">
               <mat-label>First Name</mat-label>
-              <input matInput placeholder="firstname" formControlName="firstName">
+              <input matInput placeholder="firstname" formControlName="firstName" autocomplete="off">
             </mat-form-field>
         </div>
         <div>           
            <mat-form-field appearance="legacy">
               <mat-label>Last Name</mat-label>
-              <input matInput placeholder="lastname" formControlName="lastName">
+              <input matInput placeholder="lastname" formControlName="lastName" autocomplete="off">
             </mat-form-field>
         </div>
 
         <div class="form-field">
             <mat-form-field appearance="legacy">
               <mat-label>Email Id</mat-label>
-              <input matInput placeholder="emailid" formControlName="emailId">
+              <input matInput placeholder="emailid" formControlName="emailId" autocomplete="off">
             </mat-form-field>
           </div>
           <div class="form-field">
                 <mat-form-field appearance="legacy">
                   <mat-label>Password</mat-label>
-                  <input matInput type ="password" placeholder="password" formControlName="password">
+                  <input matInput type ="password" placeholder="password" formControlName="password" autocomplete="off"> 
                 </mat-form-field>
               </div>
 
               <div class="form-field">
                 <mat-form-field appearance="legacy">
                   <mat-label>Mobile Number</mat-label>
-                  <input matInput placeholder="mobilenumber" formControlName="mobileNumber">
+                  <input matInput placeholder="mobilenumber" formControlName="mobileNumber" autocomplete="off">
                 </mat-form-field>
               </div>
 
