--- a/src/app/resetpassword/resetpassword.component.html
+++ b/src/app/resetpassword/resetpassword.component.html
@@ -7,6 +7,13 @@
                     <input matInput type="password" placeholder="new password" formControlName="password">
                 </mat-form-field>
             </div>
+
+            <div>
+                <mat-form-field appearance="legacy" style="width: 358px;">
+                    <mat-label>confirm password</mat-label>
+                    <input matInput type="password" placeholder="conferm password">
+                </mat-form-field>
+            </div>
             <div>
                     <button mat-raised-button (click)="onSubmitReset()">Submit</button>
                 </div>
