--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: space-evenly;
     min-width: 156px;
+    cursor: pointer;
 }
 .refresh{
     display: flex;
@@ -57,6 +58,21 @@
   }
   
   .example-sidenav {
-    padding: 100px;
+  width: 190px;;
+
+  }
+  .notes{
+      display:flex;
+      justify-content:left;
+  }
+  .remainder{
+    display:flex;
+    justify-content:left;
+    
+  }
+
+  .notesdiv{
+      display: flex;
+      
   }
   
