--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -34,9 +34,6 @@
             <div id="refreshbutton" mat-icon-button>
               <mat-icon>refresh</mat-icon>
             </div>
-
-
-
             <div mat-icon-button>
               <mat-icon>
                 view_agenda
@@ -80,8 +77,8 @@
           </div>
 
         </div>
-
-        <div class="lebel-main">
+        
+        <div class="lebelmain">
 
           <div>
             LABELS
@@ -99,12 +96,10 @@
               <img src="assets/icon/archive-24px.svg">
               Archive
           </div>
-
           <div>
               <img src="assets/icon/restore_from_trash-24px.svg">
               Trash
           </div>
-          
         </div>
       </div>
     </mat-drawer>
