--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -33,6 +33,7 @@
     background-color: #fff;
     border-radius: 7px;
     height: 44px;
+    width: 35em;
 }
 .input{
     width: 47em;
@@ -65,6 +66,7 @@
       padding: 25px;
       border-bottom: 1px solid;
   }
+
 .lebelmain{
     padding: 25px;
     border-bottom: 1px solid;
@@ -74,6 +76,11 @@
     padding:25px;
     border-bottom: 1px solid;
 }
-.note{
-    
+.notes{
+    display: flex;
+    align-items: center;
+}
+.remainder{
+    display: flex;
+    align-items: center;
 }
