--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,8 +7,8 @@
   
 }
 .matCard{
-  height: 50vh;
-  width: 28%;
+  height: 70vh;
+  width: 25em;
 }
 .example-container {
     display: flex;
@@ -33,6 +33,7 @@ color: rgb(108, 93, 238);
 font-family: 'Times New Roman', Times, serif;
 font-size: 20px;
 color: rgba(16, 14, 122, 0.795);
+margin-bottom: 20px;
 }
 .button{
 display: flex;
@@ -42,4 +43,9 @@ margin-bottom: 10px;
 .forgot{
   display: flex;
   justify-content:center;
+}
+
+.Log{
+  width: 25em;
+  
 }
