--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,44 +1,99 @@
-<div class=main-div  >
-<mat-card> 
-  <form  [formGroup]="registerForm">
-     
-      <h2>Registration Form</h2>
-        <div class="form-field">
-            <mat-form-field appearance="legacy">
-              <mat-label>First Name</mat-label>
-              <input matInput placeholder="firstname" formControlName="firstName" autocomplete="off">
-            </mat-form-field>
-        </div>
-        <div>           
-           <mat-form-field appearance="legacy">
-              <mat-label>Last Name</mat-label>
-              <input matInput placeholder="lastname" formControlName="lastName" autocomplete="off">
-            </mat-form-field>
-        </div>
+<div class=main-div>
+  <mat-card style="width: 30em; height: 80vh; box-shadow: 1px 1px 7px 0px;">
+    <form [formGroup]="registerForm">
 
-        <div class="form-field">
-            <mat-form-field appearance="legacy">
-              <mat-label>Email Id</mat-label>
-              <input matInput placeholder="emailid" formControlName="emailId" autocomplete="off">
-            </mat-form-field>
-          </div>
-          <div class="form-field">
-                <mat-form-field appearance="legacy">
-                  <mat-label>Password</mat-label>
-                  <input matInput type ="password" placeholder="password" formControlName="password" autocomplete="off"> 
-                </mat-form-field>
-              </div>
 
-              <div class="form-field">
-                <mat-form-field appearance="legacy">
-                  <mat-label>Mobile Number</mat-label>
-                  <input matInput placeholder="mobilenumber" formControlName="mobileNumber" autocomplete="off">
-                </mat-form-field>
-              </div>
 
-              <div>
-                  <button mat-raised-button (click)="onSubmit()">Register</button>
-              </div>    
-  </form>
-  </mat-card> 
+
+
+
+
+
+
+
+
+
+
+
+
+      <div fxLayout="row" fxLayoutAlign="center center" style="font-size:34px">
+        <span style="color: blue;">F</span>
+        <span style="color: red;">u</span>
+        <span style="color:#fbbc05;">n</span>
+        <span style="color: blue;">d</span>
+        <span style="color : green">o</span>
+        <span style="color: red;">o</span>
+        <span style="color: blue;">N</span>
+        <span style="color: red;">o</span>
+        <span style="color: blue;">t</span>
+        <span style="color : green">e</span>
+        <span style="color: red;">s</span>
+      </div>
+
+
+
+
+      <div class="Fundoo_Name" fxLayout="row" fxLayoutAlign="center center"
+        style="font-size:24px; margin-top: 20px; margin-bottom: 20px; color: seagreen;">Create Your Fundoo
+        Account</div>
+      <div class="form_field">
+
+        <mat-form-field appearance="outline">
+          <mat-label>firstName</mat-label>
+          <input matInput placeholder="firstName" formControlName="firstName">
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+          <mat-label>lastName</mat-label>
+          <input matInput placeholder="lastName" formControlName="lastName">
+        </mat-form-field>
+
+      </div>
+
+      <div>
+
+
+
+
+        <mat-form-field appearance="outline" class="form-Email">
+          <mat-label>Email</mat-label>
+          <input matInput placeholder="Email" formControlName="emailId">
+        </mat-form-field>
+
+      </div>
+      <div class="form_field">
+
+
+
+
+
+
+        <mat-form-field appearance="outline">
+          <mat-label>Password</mat-label>
+          <input matInput placeholder="Password" formControlName="password">
+        </mat-form-field>
+
+
+
+        <mat-form-field appearance="outline">
+          <mat-label>Mobile Number</mat-label>
+          <input matInput placeholder="mobilenumber" formControlName="mobileNumber">
+        </mat-form-field>
+
+
+
+
+
+
+
+
+      </div>
+
+      <div class="form_field">
+        <button mat-raised-button (click)="onSubmit()">Register</button>
+
+        <button mat-raised-button>Login Instead</button>
+      </div>
+    </form>
+  </mat-card>
 </div>
