--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -4,3 +4,10 @@
     justify-content: center;
     align-items: center;
 }
+.form_field{
+    display: flex;
+    justify-content: space-between;
+}
+.form-Email{
+    width: 30em;
+}
