--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,5 +1,2 @@
-<div *ngFor="let note of notes">
-
-    {{note.title}}
-    {{note.desc}}
-</div>
+<app-createnote></app-createnote>
+<app-display-notes></app-display-notes>
