--- a/src/app/display-notes/display-notes.component.html
+++ b/src/app/display-notes/display-notes.component.html
@@ -1,10 +1,9 @@
-<div class="getAllNotes" fxLayout="{{view}}" fxFlexOffset="15" >
-
+<div style="flex-wrap: wrap;"><div class="getAllNotes" fxLayout="{{view}}" fxFlexOffset="15" >
     <mat-card class="getNotesMat" [ngStyle]="{'background':note.color}"
-    [ngClass]="{'qwerty':flag,'qwerty2':!flag}"  *ngFor="let note of notes">
+    [ngClass]="{'qwerty':flag,'qwerty2':!flag}"  *ngFor="let note of notes" >
        
        
-        <div  (click)="openDialog(note)">
+        <div  (click)="openDialog(note)" >
             <div class="tile">
                 {{note.title}}
             </div>
@@ -20,4 +19,4 @@
     </mat-card>
    
   
-  </div>
+  </div></div>
