--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -58,7 +58,7 @@
 
         <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
-          <input matInput placeholder="Password" formControlName="password">
+          <input matInput placeholder="Password" type ="password" formControlName="password">
         </mat-form-field>
 
 
@@ -67,12 +67,6 @@
           <mat-label>Mobile Number</mat-label>
           <input matInput placeholder="mobilenumber" formControlName="mobileNumber">
         </mat-form-field>
-
-
-
-
-
-
 
 
       </div>
