--- a/src/app/iconlist/iconlist.component.scss
+++ b/src/app/iconlist/iconlist.component.scss
@@ -1,5 +1,8 @@
+
 .main{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
+    
     
 }
